# fuzzy-reasoner

./: .codecov.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
fuzzy_reasoner/: __init__.py  similarity.py
fuzzy_reasoner/prover/: Goal.py  Proof.py  ProofGraph.py  ProofState.py  SLDProver.py
fuzzy_reasoner/prover/operations/: recurse.py  substitution.py  unify.py
fuzzy_reasoner/types/: Atom.py  Constant.py  Predicate.py  ProofGraph.py  Rule.py  __init__.py
tests/: test_fuzzy_reasoner.py  test_similarity.py
tests/prover/: test_SLDProver.py
tests/prover/operations/: test_substitution.py  test_unify.py
