[tool.poetry]
name = "fuzzy-reasoner"
version = "0.1.2"
description = "Simple symbolic reasoner which supports fuzzy unification"
license = "MIT"
readme = "README.md"
repository = "https://github.com/chanind/fuzzy-reasoner"
authors = ["David Chanin <chanindav@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
numpy = "^1.21.1"
immutables = "^0.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "fuzzy_reasoner/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
